Prevent text wrapping for BlastSequenceButton label

--- a/src/shared/components/blast-sequence-button/BlastSequenceButton.scss
+++ b/src/shared/components/blast-sequence-button/BlastSequenceButton.scss
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   column-gap: var(--blast-sequence-button-label-distance, 24px);
+  white-space: nowrap;
 }
 
 .label {
